<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView"
            android:text="@string/cl"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:text="@string/multiTextValue"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/button6" android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="1.0"
            android:scrollbars="vertical" android:autofillHints=""/>
    <Button
            android:text="@string/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/button6"/>
    <Button
            android:text="@string/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7" app:layout_constraintEnd_toStartOf="@+id/button6" android:layout_marginEnd="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button6"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp" app:srcCompat="@drawable/ball_100x100"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/editText" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:contentDescription="@string/contentDescription"/>
</android.support.constraint.ConstraintLayout>